--- a/mainpage.html
+++ b/mainpage.html
@@ -35,5 +35,10 @@
         <h1>Interesting videos</h1>
         <p>interest youtube api here</p>
     </div>
+
+    <div>
+        <h1>Contact details</h1>
+        <p>jeanluc@gmail.com</p>
+    </div>
 </body>
 </html>
