added CV download and youtube API

--- a/mainpage.html
+++ b/mainpage.html
@@ -33,12 +33,20 @@
 
     <div>
         <h1>Interesting videos</h1>
-        <p>interest youtube api here</p>
+        <h2>The unkillable Michael Malloy</h2>
+        <iframe src="https://www.youtube.com/embed/kuYylDsN6KQ"></iframe>
+        <h2>A fun little hsitory lesson</h2>
+        <iframe src="https://www.youtube.com/embed/-Wx6npt421c"></iframe>
     </div>
 
     <div>
         <h1>Contact details</h1>
         <p>jeanluc@gmail.com</p>
+
+        <h1>Download for CV</h1>
+        <a href="CV.docx">
+            <button type="submit">DOWNLOAD CV</button>
+        </a>
     </div>
 </body>
 </html>
