add buttons and sperated scripting

--- a/mainpage.html
+++ b/mainpage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="mainpage.css">
+    <script src="mainpage.js"></script>
 </head>
 <body onload="myFunction()">
     
@@ -14,18 +15,24 @@
 
     <div id="maincontent" class="animate-bottom" style="display: none;">
             <!-- landing page elements -->
-        <div>
+        <div class="firstpage">
             <h1>WELCOME TO MY WEBSITE</h1>
+
+            <button onclick="summaryFunction()" class="firstpagebutton">About me</button>
+            <button onclick="experienceFunction()" class="firstpagebutton">Coding experience</button>
+            <button onclick="interestsFunction()" class="firstpagebutton">Interests</button>
+            <button onclick="videoFunction()" class="firstpagebutton">Interesting videos</button>
+            <button onclick="contactFunction()" class="firstpagebutton">Contact details</button>
         </div>
 
         <!-- sumarry page elements -->
-        <div>
+        <div id="summary">
             <h1>ABOUT ME</h1>
             <p>My name is Jean-Luc, I'm a third year IT student</p>
         </div>
 
         <!-- coding experience page elements -->
-        <div>
+        <div id="experience">
             <h1>Coding experience</h1>
             <li>C#</li>
             <li>Java</li>
@@ -34,7 +41,7 @@
         </div>
 
         <!-- interest page elements -->
-        <div>
+        <div id="interests">
             <h1>Interests</h1>
             <li>gaming</li>
             <li>history</li>
@@ -42,7 +49,7 @@
         </div>
 
         <!-- Interesting video page elements -->
-        <div>
+        <div id="video">
             <h1>Interesting videos</h1>
             <h2>The unkillable Michael Malloy</h2>
             <iframe src="https://www.youtube.com/embed/kuYylDsN6KQ"></iframe>
@@ -51,7 +58,7 @@
         </div>
 
         <!-- contact details page elements -->
-        <div>
+        <div id="contact">
             <h1>Contact details</h1>
             <p>jeanluc@gmail.com</p>
 
@@ -61,19 +68,5 @@
             </a>
         </div>
     </div>
-
-<script>
-    // scripting for loader
-    var myVar;
-
-    function myFunction() {
-        myVar = setTimeout(showPage, 3000);
-    }
-
-    function showPage() {
-        document.getElementById("loader").style.display = "none";
-        document.getElementById("maincontent").style.display = "block";
-    }
-</script>
 </body>
 </html>
