added hover effect

--- a/mainpage.html
+++ b/mainpage.html
@@ -26,13 +26,13 @@
         </div>
 
         <!-- sumarry page elements -->
-        <div id="summary">
+        <div id="summary" style="display: none;">
             <h1>ABOUT ME</h1>
             <p>My name is Jean-Luc, I'm a third year IT student</p>
         </div>
 
         <!-- coding experience page elements -->
-        <div id="experience">
+        <div id="experience" style="display: none;">
             <h1>Coding experience</h1>
             <li>C#</li>
             <li>Java</li>
@@ -41,7 +41,7 @@
         </div>
 
         <!-- interest page elements -->
-        <div id="interests">
+        <div id="interests" style="display: none;">
             <h1>Interests</h1>
             <li>gaming</li>
             <li>history</li>
@@ -49,7 +49,7 @@
         </div>
 
         <!-- Interesting video page elements -->
-        <div id="video">
+        <div id="video" style="display: none;">
             <h1>Interesting videos</h1>
             <h2>The unkillable Michael Malloy</h2>
             <iframe src="https://www.youtube.com/embed/kuYylDsN6KQ"></iframe>
@@ -58,7 +58,7 @@
         </div>
 
         <!-- contact details page elements -->
-        <div id="contact">
+        <div id="contact" style="display: none;">
             <h1>Contact details</h1>
             <p>jeanluc@gmail.com</p>
 
