--- a/mainpage.html
+++ b/mainpage.html
@@ -29,9 +29,15 @@
         <div class="popup" id="modal1">
             <a href="#" class="popup_overlay"></a>
             <div class="popup_content">
-                <a href="#" class="popup_close">Close</a>
-                <h1>ABOUT ME</h1>
-                <p>My name is Jean-Luc, I'm a third year IT student</p>
+                <div class="popup_header">
+                    <h2>ABOUT ME</h2>
+                </div>
+                <div class="popup_body">
+                    <p>My name is Jean-Luc, I'm a third year IT student</p>
+                </div>
+                <div class="popup_footer">
+                    <a href="#"><button class="popup_close">Close</button></a>
+                </div>
             </div>
         </div>
 
@@ -39,12 +45,25 @@
         <div class="popup" id="modal2">
             <a href="#" class="popup_overlay"></a>
             <div class="popup_content">
-                <a href="#" class="popup_close">Close</a>
-                <h1>Coding experience</h1>
-                <li>C#</li>
-                <li>Java</li>
-                <li>Python</li>
-                <li>Web development</li>
+                <div class="popup_header">
+                    <h2>Coding experience</h2>
+                </div>
+                <div class="popup_body">
+                    <h3>Java</h3>
+                    <p>Level: Above average <br>I have extensive knowledge on how Java works and how to create my functions</p><br>
+
+                    <h3>C#</h3>
+                    <p>Level: Good<br>I have a lot of experience with C# including ASP.NET</p><br>
+
+                    <h3>C/C++</h3>                   
+                    <p>Level: Average<br>I understand all the fundamentals of C/C++ including how to work with pointers</p><br>
+
+                    <h3>Python</h3>                   
+                    <p>Level: Average<br>I udnerstand the fundamentals of Python</p><br>
+                </div>
+                <div class="popup_footer">
+                    <a href="#"><button class="popup_close">Close</button></a>
+                </div>
             </div>
         </div>
 
@@ -52,11 +71,17 @@
         <div class="popup" id="modal3">
             <a href="#" class="popup_overlay"></a>
             <div class="popup_content">
-                <a href="#" class="popup_close">Close</a>
-                <h1>Interests</h1>
-                <li>gaming</li>
-                <li>history</li>
-                <li>Science and technology</li>
+                <div class="popup_header">
+                    <h2>Interests</h2>
+                </div>
+                <div class="popup_body">
+                    <li>gaming</li>
+                    <li>history</li>
+                    <li>Science and technology</li>
+                </div>
+                <div class="popup_footer">
+                    <a href="#"><button class="popup_close">Close</button></a>
+                </div>
             </div>
         </div>
 
@@ -64,12 +89,19 @@
         <div class="popup" id="modal4">
             <a href="#" class="popup_overlay"></a>
             <div class="popup_content">
-                <a href="#" class="popup_close">Close</a>
-                <h1>Interesting videos</h1>
-                <h2>The unkillable Michael Malloy</h2>
-                <iframe src="https://www.youtube.com/embed/kuYylDsN6KQ"></iframe>
-                <h2>A fun little hsitory lesson</h2>
-                <iframe src="https://www.youtube.com/embed/-Wx6npt421c"></iframe>
+                <div class="popup_header">
+                    <h2>Interesting videos</h2>
+                </div>
+                <div class="popup_body">
+                    <h3>The unkillable Michael Malloy</h3>
+                    <iframe src="https://www.youtube.com/embed/kuYylDsN6KQ"></iframe>
+                    
+                    <h3>A fun little hsitory lesson</h3>
+                    <iframe src="https://www.youtube.com/embed/-Wx6npt421c"></iframe>
+                </div>
+                <div class="popup_footer">
+                    <a href="#"><button class="popup_close">Close</button></a>
+                </div>
             </div>
         </div>
 
@@ -77,14 +109,20 @@
         <div class="popup" id="modal5">
             <a href="#" class="popup_overlay"></a>
             <div class="popup_content">
-                <a href="#" class="popup_close">Close</a>
-                <h1>Contact details</h1>
-                <p>jeanluc@gmail.com</p>
+                <div class="popup_header">
+                    <h2>Contact details</h2>
+                </div>
+                <div class="popup_body">
+                    <p>jeanluc@gmail.com</p>
 
-                <h1>Download for CV</h1>
-                <a href="CV.docx">
-                    <button type="submit">DOWNLOAD CV</button>
-                </a>
+                    <h3>Download for CV</h3>
+                    <a href="CV.docx">
+                        <button type="submit">DOWNLOAD CV</button>
+                    </a>
+                </div>
+                <div class="popup_footer">
+                    <a href="#"><button class="popup_close">Close</button></a>
+                </div>
             </div>            
         </div>
     </div>
